name: css-conditioner
version: 1.0
cabal-version: >= 1.6.0.0
build-type: Simple

library
  build-depends: base >= 4 && < 5
  build-depends: parsec
  build-depends: transformers
  build-depends: test-framework >= 0.2.0
  build-depends: test-framework-quickcheck >= 0.2.0
  build-depends: QuickCheck >= 1.1 && < 2
  build-depends: test-framework-hunit >= 0.2.0
  build-depends: HUnit >= 1.2 && < 2
  hs-source-dirs: src
  ghc-options: -fwarn-tabs -fwarn-unused-do-bind -fwarn-incomplete-record-updates -Wall -Werror
  exposed-modules: CSS.Model CSS.ParseNode CSS.Parser CSS.Search Hints.Model Hints.Pseudo Main
  Extensions: MultiParamTypeClasses NamedFieldPuns